Add ECS, add workflow for terraform destroy which is chicken/eggy (#7)
* use data for vpc id

* make task publically available to my ip. deploy terraform from dev branch. for speed.

* output ecs pip

* output ecs pip

* Add efs for persistent storage

* fix subnet_id to str instead of list

* switch mount point

* tf-folder not required param

* DESTROOOOOYYYYY

* DESTROOOOOYYYYY

* update gitignore

* update gitignore

* Revert "update gitignore"

This reverts commit ca3df1d25ed5593d6a040c97f11d3d3c543ce7f0.

* remove zone ids

* [skip ci] add tf destroy workflow, and prevent EFS from being destroyed

* [skip ci] rename tf destroy workflow

* [skip ci] fix destroy workflow_call

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ on:
         default: 'production'
       tf-folder:
         description: 'speocific folder to deploy. use in chicken/egg scenarios'
-        required: true
+        required: false
         default: ''
       destroy:
         description: 'destroy'
@@ -85,12 +85,11 @@ jobs:
           terraform plan -out=tfplan -input=false
           
           # If on main branch, run apply
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+          if [ "${{ inputs.destroy }}" == "true" ]; then
+            terraform destroy -auto-approve
+          elif [ "${{ github.ref }}" == "refs/heads/dev" ]; then
             # Apply only if on main
             terraform apply -input=false -auto-approve tfplan
-          fi
-          if [ "$DESTROY" == "true" ]; then
-            terraform destroy -auto-approve
           fi
         working-directory: ./terraform-ecr
 
@@ -172,11 +171,10 @@ jobs:
           terraform plan -out=tfplan -input=false
           
           # If on main branch, run apply
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+          if [ "${{ inputs.destroy }}" == "true" ]; then
+            terraform destroy -auto-approve
+          elif [ "${{ github.ref }}" == "refs/heads/dev" ]; then
             # Apply only if on main
             terraform apply -input=false -auto-approve tfplan
-          fi
-          if [ "$DESTROY" == "true" ]; then
-            terraform destroy -auto-approve
           fi
         working-directory: ./terraform-ecs
