--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -11,11 +11,35 @@ on:
 
 
 jobs:
+  destroy-ecs:
+    environment: Production
+    runs-on: ubuntu-latest
+    env:
+      TF_VERSION: 1.12.2
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+          
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform-ecs
+
+      - name: Terraform Apply
+        run: |
+          terraform destroy -auto-approve
+        working-directory: ./terraform-ecs
+
   delete-ecr-repo:
     environment: Production
     runs-on: ubuntu-latest
-    outputs:
-      ecr_exists: ${{ steps.check-ecr.outputs.exists }}
     steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -41,7 +65,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     runs-on: ubuntu-latest
-    needs: [delete-ecr-repo]
+    needs: [delete-ecr-repo, destroy-ecs]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -62,29 +86,3 @@ jobs:
         working-directory: ./terraform-ecr
 
 
-  deploy-ecs:
-    needs: [destroy-ecr]
-    environment: Production
-    runs-on: ubuntu-latest
-    env:
-      TF_VERSION: 1.12.2
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
-          
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform-ecs
-
-      - name: Terraform Apply
-        run: |
-          terraform destroy -auto-approve
-        working-directory: ./terraform-ecs
