--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -40,6 +40,7 @@ jobs:
   delete-ecr-repo:
     environment: Production
     runs-on: ubuntu-latest
+
     steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -53,7 +54,7 @@ jobs:
       run: |
         if aws ecr describe-repositories --repository-names fusion > /dev/null 2>&1; then
           echo "repo exists, deleting"
-          aws ecr delete-repository --repository-name fusion --force          
+          aws ecr batch-delete-image --repository-name fusion --image-ids $(aws ecr list-images --repository-name fusion --query 'imageIds[*]' --output json)          
         else
           echo "repo does not exist"
         fi
