add correct tf-folder

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,7 +27,7 @@ jobs:
     uses: ./.github/workflows/deploy-tffolder.yml
     secrets: inherit
     with:
-      tf-folder: 'terraform/production'
+      tf-folder: './terraform-ecr'
 
   # build-and-push-image:
   #   environment: Production
