--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -40,7 +40,7 @@ jobs:
   delete-ecr-repo:
     environment: Production
     runs-on: ubuntu-latest
-
+    needs: [destroy-ecs]
     steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
