--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,51 +35,58 @@ jobs:
     with:
       tf-folder: './terraform-efs'
 
-  # build-and-push-image:
-  #   environment: Production
-  #   runs-on: ubuntu-latest
-  #   needs: [deploy-ecr]
-  #   permissions:
-  #     contents: read
-  #     # id-token: write
+  deploy-ecs:
+    uses: ./.github/workflows/deploy-tffolder.yml
+    secrets: inherit
+    needs: [deploy-efs, deploy-ecr]
+    with:
+      tf-folder: './terraform-ecs'
 
-  #   env:
-  #     AWS_REGION: ${{ vars.AWS_REGION }}
-  #     REPOSITORY: fusion
-  #     ECR_REPO_URI: 471230323408.dkr.ecr.us-west-2.amazonaws.com/fusion
+  build-and-push-image:
+    environment: Production
+    runs-on: ubuntu-latest
+    needs: [deploy-ecr]
+    permissions:
+      contents: read
+      # id-token: write
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+    env:
+      AWS_REGION: ${{ vars.AWS_REGION }}
+      REPOSITORY: fusion
+      ECR_REPO_URI: 471230323408.dkr.ecr.us-west-2.amazonaws.com/fusion
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v2
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ env.AWS_REGION }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  #     - name: Login to Amazon ECR
-  #       uses: aws-actions/amazon-ecr-login@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-  #     - name: Build Docker Image
-  #       id: build_image
-  #       run: |
-  #         if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
-  #           cd docker  # Remove if Dockerfile is in root
-  #           IMAGE_TAG=${{ github.sha }}
-  #           docker build -t $ECR_REPO_URI:$IMAGE_TAG .
-  #           echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-  #         fi
-  #     - name: Tag Docker Image for ECR
-  #       run: |
-  #         if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
-  #           docker tag $ECR_REPO_URI:${{ github.sha }}  $ECR_REPO_URI:latest
-  #         fi
-  #     - name: Push Docker Image to ECR
-  #       run: |
-  #         if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
-  #           docker push $ECR_REPO_URI:${{ github.sha }}
-  #           docker push $ECR_REPO_URI:latest
-  #         fi
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build Docker Image
+        id: build_image
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
+            cd docker  # Remove if Dockerfile is in root
+            IMAGE_TAG=${{ github.sha }}
+            docker build -t $ECR_REPO_URI:$IMAGE_TAG .
+            echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          fi
+      - name: Tag Docker Image for ECR
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
+            docker tag $ECR_REPO_URI:${{ github.sha }}  $ECR_REPO_URI:latest
+          fi
+      - name: Push Docker Image to ECR
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
+            docker push $ECR_REPO_URI:${{ github.sha }}
+            docker push $ECR_REPO_URI:latest
+          fi
          
