--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,94 +23,70 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
-  call-terraform-workflow:
+  deploy-ecr:
     uses: ./.github/workflows/deploy-tffolder.yml
     secrets: inherit
     with:
-      tf-folder: 'terraform/production'
+      tf-folder: './terraform-ecr'
 
-  # build-and-push-image:
-  #   environment: Production
-  #   runs-on: ubuntu-latest
-  #   needs: [deploy-ecr]
-  #   permissions:
-  #     contents: read
-  #     # id-token: write
+  deploy-efs:
+    uses: ./.github/workflows/deploy-tffolder.yml
+    secrets: inherit
+    with:
+      tf-folder: './terraform-efs'
 
-  #   env:
-  #     AWS_REGION: ${{ vars.AWS_REGION }}
-  #     REPOSITORY: fusion
-  #     ECR_REPO_URI: 471230323408.dkr.ecr.us-west-2.amazonaws.com/fusion
+  deploy-ecs:
+    uses: ./.github/workflows/deploy-tffolder.yml
+    secrets: inherit
+    needs: [deploy-efs, deploy-ecr, build-and-push-image]
+    with:
+      tf-folder: './terraform-ecs'
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+  build-and-push-image:
+    environment: Production
+    runs-on: ubuntu-latest
+    needs: [deploy-ecr]
+    permissions:
+      contents: read
+      # id-token: write
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v2
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ env.AWS_REGION }}
+    env:
+      AWS_REGION: ${{ vars.AWS_REGION }}
+      REPOSITORY: fusion
+      ECR_REPO_URI: 471230323408.dkr.ecr.us-west-2.amazonaws.com/fusion
 
-  #     - name: Login to Amazon ECR
-  #       uses: aws-actions/amazon-ecr-login@v1
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  #     - name: Build Docker Image
-  #       id: build_image
-  #       run: |
-  #         if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
-  #           cd docker  # Remove if Dockerfile is in root
-  #           IMAGE_TAG=${{ github.sha }}
-  #           docker build -t $ECR_REPO_URI:$IMAGE_TAG .
-  #           echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-  #         fi
-  #     - name: Tag Docker Image for ECR
-  #       run: |
-  #         if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
-  #           docker tag $ECR_REPO_URI:${{ github.sha }}  $ECR_REPO_URI:latest
-  #         fi
-  #     - name: Push Docker Image to ECR
-  #       run: |
-  #         if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
-  #           docker push $ECR_REPO_URI:${{ github.sha }}
-  #           docker push $ECR_REPO_URI:latest
-  #         fi
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build Docker Image
+        id: build_image
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
+            cd docker  # Remove if Dockerfile is in root
+            IMAGE_TAG=${{ github.sha }}
+            docker build -t $ECR_REPO_URI:$IMAGE_TAG .
+            echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          fi
+      - name: Tag Docker Image for ECR
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
+            docker tag $ECR_REPO_URI:${{ github.sha }}  $ECR_REPO_URI:latest
+          fi
+      - name: Push Docker Image to ECR
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ inputs.build_image }}" == "true" ]]; then
+            docker push $ECR_REPO_URI:${{ github.sha }}
+            docker push $ECR_REPO_URI:latest
+          fi
          
-  # deploy-ecs:
-  #   needs: [build-and-push-image]
-  #   environment: Production
-  #   runs-on: ubuntu-latest
-  #   if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'  # Optional, for clarity
-
-  #   env:
-  #     TF_VERSION: 1.12.2
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
-
-  #     - name: Set up Terraform
-  #       uses: hashicorp/setup-terraform@v2
-  #       with:
-  #         terraform_version: ${{ env.TF_VERSION }}
-          
-  #     - name: Terraform Init
-  #       run: terraform init
-  #       working-directory: ./terraform-ecs
-
-  #     - name: Terraform Apply
-  #       run: |
-  #         # Plan to review before apply (optional)
-  #         terraform plan -out=tfplan -input=false
-          
-  #         # If on main branch, run apply
-  #         if [ "${{ inputs.destroy }}" == "true" ]; then
-  #           terraform destroy -auto-approve
-  #         elif [ "${{ github.ref }}" == "refs/heads/dev" ]; then
-  #           # Apply only if on main
-  #           terraform apply -input=false -auto-approve tfplan
-  #         fi
-  #       working-directory: ./terraform-ecs
