--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #WSL
 img/*Zone.Identifier
-terraform-ecs/.infracost/*
+terraform-ecs/.infracost
 workspace.*
 # Local .terraform directories
 **/.terraform/*
