--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
     - id: terraform_docs
     - id: infracost_breakdown
       args:
-        - --args= --path=./terraform-ecs 
+        - --args= --config-file .infracost-config.yaml 
       verbose: true
     - id: terraform_trivy
       args:
