add deployment of log analytics to azure

--- a/.infracost-config.yaml
+++ b/.infracost-config.yaml
@@ -16,4 +16,7 @@ projects:
   - path: terraform-efs
     name: terraform-efs
     skip_autodetect: true
+  - path: terraform-logs
+    name: terraform-logs
+    skip_autodetect: true
 
